--- a/cart.html
+++ b/cart.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
   <link rel="stylesheet" href="css/custom.css">
+  <link rel="stylesheet" href="css/product.css">
   <title>Cart</title>
 </head>
 <body>
@@ -153,8 +154,10 @@
                   </div>
                   <div class="col-sm-12 col-md-6 text-right">
                       <h5 class="text-left"><span class="font-weight-bold">Total </span><span class="total"> Rp 260000</span></h5>
-                      <a class="btn btn-block btn-success text-white mt-3">Checkout</a>
-                  </div>
+                      <div class="btn buy_now_btn">
+                        <a class="fv-btn" href="payment.html">submit review</a>
+                    </div>
+                    </div>
               </div>
           </div>
       </div>
