--- a/cart.html
+++ b/cart.html
@@ -77,7 +77,7 @@
                               <th scope="col"> </th>
                               <th scope="col">Product</th>
                               <th scope="col">Available</th>
-                              <th scope="col" class="text-center">Quantity</th>
+                              <th scope="col" class="text-center" style="min-width: 150px;">Quantity</th>
                               <th scope="col" class="text-right">Price</th>
                               <th scope="col" class="text-right">Subtotal</th>
                               <th> </th>
@@ -96,7 +96,7 @@
                                               <i class="fa fa-minus"></i>
                                           </button>
                                       </div>
-                                      <input type="text" class="form-control text-center"  readonly id="quantity" name="quantity" min="1" max="100" value="1">
+                                      <input type="text" class="form-control text-center bg-white"  readonly id="quantity" name="quantity" min="1" max="100" value="1">
                                       <div class="input-group-append">
                                           <button type="button" class="quantity-right-plus btn btn-orange btn-number" data-type="plus" data-field="">
                                               <i class="fa fa-plus"></i>
@@ -125,7 +125,7 @@
                                               <i class="fa fa-minus"></i>
                                           </button>
                                       </div>
-                                      <input type="text" class="form-control text-center"  readonly  id="quantity2" name="quantity" min="1" max="100" value="1">
+                                      <input type="text" class="form-control text-center bg-white"  readonly  id="quantity2" name="quantity" min="1" max="100" value="1">
                                       <div class="input-group-append">
                                           <button type="button" class="quantity-right-plus2 btn btn-orange btn-number" data-type="plus" data-field="">
                                               <i class="fa fa-plus"></i>
