--- a/asus.html
+++ b/asus.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="css/custom.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
-    <title>merk/Asus</title>
+    <title>merk/asus</title>
 </head>
 <body>
 <!-- Navigasi Bar -->
@@ -29,7 +29,7 @@
               <a class="dropdown-item" href="lenovo.html">Lenovo</a>
               <a class="dropdown-item" href="asus.html">Asus</a>
               <!-- <div class="dropdown-divider"></div> -->
-              <a class="dropdown-item" href="mac.html">Mac</a>
+              <a class="dropdown-item" href="acer.html">Acer</a>
             </div>
           </li>
           <li class="nav-item">
@@ -63,19 +63,18 @@
                 <ol class="breadcrumb bg-white">
                     <li class="breadcrumb-item"><a href="index.html" class="text-link">Home</a></li>
                     <li class="breadcrumb-item active" aria-current="page">Merk</li>
-                    <li class="breadcrumb-item active" aria-current="page">Asus</li>
+                    <li class="breadcrumb-item active" aria-current="page">asus</li>
                 </ol>
             </nav>
         </div>
     </div>
   </div>
-    <!-- produk -->
+          <!-- produk -->
   <div class="container-fluid mt-3"> 
     <div class="row mt-5">
         <div class="col-sm">
-        <!-- <div class="card"> -->
             <div class="judul text-uppercase">
-            <p>Asus</p> 
+            <p>asus</p> 
             <hr class="bg-custom mb-2 mt-0 d-inline-block mx-auto w-25">
             </div>
             <!-- <div class="card-header text-white text-uppercase">
@@ -83,8 +82,35 @@
             <div class="card-body">
                 <div class="row">
                     <div class="col-sm">
+                        <a href="product.html">
+                          <div class="card">
+                            <div class="gambar">
+                              <span class="badge badge-secondary badge-pill bg-custom position-absolute mt-2 px-3 py-2 offset-md">6%</span>
+                              <img class="card-img-top" src="img/Asusx441.jpg" alt="Card image cap">
+                            </div>
+                            <div class="card-body">
+                              <h4 class="card-title">Asus X441Uv</h4>
+                              <p  class="text-lg warna"><strike style="color:gray" class="text-xl">Rp4.250.000</strike> Rp3.995.000</p>                                 
+                              <div class="star">
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star "></span>
+                              </div>
+                            </div>
+                            <div class="card-footer">
+                              <small class="text-muted">Last updated 3 mins ago</small>
+                              <span class="far fa-heart float-right merah"></span>
+                            </div>
+                          </div>
+                        </a>
+                    </div> 
+                    <div class="col-sm">
                         <div class="card">
-                        <img class="card-img-top" src="https://dummyimage.com/600x400/55595c/fff" alt="Card image cap">
+                        <div class="gambar">
+                            <img class="card-img-top " src="https://dummyimage.com/600x400/55595c/fff" alt="Card image cap">
+                        </div>
                         <div class="card-body">
                             <h4 class="card-title">Product title</h4>
                             <p style="color:#EE5A24" class="text-lg"><strike style="color:gray" class="text-xl">Rp69000</strike> Rp.....</p>                                 
@@ -95,12 +121,17 @@
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
                             </div>
+                        </div>
+                        <div class="card-footer">
+                            <small class="text-muted">Last updated 3 mins ago</small>
                         </div>
                         </div>
                     </div>
                     <div class="col-sm">
                         <div class="card">
-                        <img class="card-img-top" src="https://dummyimage.com/600x400/55595c/fff" alt="Card image cap">
+                        <div class="gambar">
+                            <img class="card-img-top " src="https://dummyimage.com/600x400/55595c/fff" alt="Card image cap">
+                        </div>
                         <div class="card-body">
                             <h4 class="card-title">Product title</h4>
                             <p style="color:#EE5A24" class="text-lg"><strike style="color:gray" class="text-xl">Rp69000</strike> Rp.....</p>                                 
@@ -111,12 +142,17 @@
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
                             </div>
+                        </div>
+                        <div class="card-footer">
+                            <small class="text-muted">Last updated 3 mins ago</small>
                         </div>
                         </div>
                     </div>
                     <div class="col-sm">
                         <div class="card">
-                        <img class="card-img-top" src="https://dummyimage.com/600x400/55595c/fff" alt="Card image cap">
+                        <div class="gambar">
+                            <img class="card-img-top " src="https://dummyimage.com/600x400/55595c/fff" alt="Card image cap">
+                        </div>
                         <div class="card-body">
                             <h4 class="card-title">Product title</h4>
                             <p style="color:#EE5A24" class="text-lg"><strike style="color:gray" class="text-xl">Rp69000</strike> Rp.....</p>                                 
@@ -127,12 +163,17 @@
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
                             </div>
+                        </div>
+                        <div class="card-footer">
+                            <small class="text-muted">Last updated 3 mins ago</small>
                         </div>
                         </div>
                     </div>
                     <div class="col-sm">
                         <div class="card">
-                        <img class="card-img-top" src="https://dummyimage.com/600x400/55595c/fff" alt="Card image cap">
+                        <div class="gambar">
+                            <img class="card-img-top " src="https://dummyimage.com/600x400/55595c/fff" alt="Card image cap">
+                        </div>
                         <div class="card-body">
                             <h4 class="card-title">Product title</h4>
                             <p style="color:#EE5A24" class="text-lg"><strike style="color:gray" class="text-xl">Rp69000</strike> Rp.....</p>                                 
@@ -144,24 +185,12 @@
                                 <span class="fa fa-star checked"></span>
                             </div>
                         </div>
-                        </div>
-                    </div>
-                    <div class="col-sm">
-                        <div class="card">
-                        <img class="card-img-top" src="https://dummyimage.com/600x400/55595c/fff" alt="Card image cap">
-                        <div class="card-body">
-                            <h4 class="card-title">Product title</h4>
-                            <p style="color:#EE5A24" class="text-lg"><strike style="color:gray" class="text-xl">Rp69000</strike> Rp.....</p>                                 
-                            <div class="star">
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star checked"></span>
-                            </div>
+                        <div class="card-footer">
+                            <small class="text-muted">Last updated 3 mins ago</small>
                         </div>
                         </div>
                     </div>
+                    
                 </div>                           
             </div>
             <!-- </div> -->
@@ -173,7 +202,9 @@
                 <div class="row">
                     <div class="col-sm">
                         <div class="card">
-                        <img class="card-img-top" src="https://dummyimage.com/600x400/55595c/fff" alt="Card image cap">
+                        <div class="gambar">
+                            <img class="card-img-top" src="https://dummyimage.com/600x400/55595c/fff" alt="Card image cap">
+                        </div>
                         <div class="card-body">
                             <h4 class="card-title">Product title</h4>
                             <h6>Rp.....</h6>
@@ -185,11 +216,16 @@
                                 <span class="fa fa-star checked"></span>
                             </div>
                         </div>
+                        <div class="card-footer">
+                            <small class="text-muted">Last updated 3 mins ago</small>
                         </div>
-                    </div>                         
+                        </div>
+                    </div>
                     <div class="col-sm">
                         <div class="card">
-                        <img class="card-img-top" src="https://dummyimage.com/600x400/55595c/fff" alt="Card image cap">
+                        <div class="gambar">
+                            <img class="card-img-top" src="https://dummyimage.com/600x400/55595c/fff" alt="Card image cap">
+                        </div>
                         <div class="card-body">
                             <h4 class="card-title">Product title</h4>
                             <h6>Rp.....</h6>
@@ -201,11 +237,16 @@
                                 <span class="fa fa-star checked"></span>
                             </div>
                         </div>
+                        <div class="card-footer">
+                            <small class="text-muted">Last updated 3 mins ago</small>
                         </div>
-                    </div>                         
+                        </div>
+                    </div>
                     <div class="col-sm">
                         <div class="card">
-                        <img class="card-img-top" src="https://dummyimage.com/600x400/55595c/fff" alt="Card image cap">
+                        <div class="gambar">
+                            <img class="card-img-top" src="https://dummyimage.com/600x400/55595c/fff" alt="Card image cap">
+                        </div>
                         <div class="card-body">
                             <h4 class="card-title">Product title</h4>
                             <h6>Rp.....</h6>
@@ -217,11 +258,16 @@
                                 <span class="fa fa-star checked"></span>
                             </div>
                         </div>
+                        <div class="card-footer">
+                            <small class="text-muted">Last updated 3 mins ago</small>
                         </div>
-                    </div>                         
+                        </div>
+                    </div>
                     <div class="col-sm">
                         <div class="card">
-                        <img class="card-img-top" src="https://dummyimage.com/600x400/55595c/fff" alt="Card image cap">
+                        <div class="gambar">
+                            <img class="card-img-top" src="https://dummyimage.com/600x400/55595c/fff" alt="Card image cap">
+                        </div>
                         <div class="card-body">
                             <h4 class="card-title">Product title</h4>
                             <h6>Rp.....</h6>
@@ -233,11 +279,16 @@
                                 <span class="fa fa-star checked"></span>
                             </div>
                         </div>
+                        <div class="card-footer">
+                            <small class="text-muted">Last updated 3 mins ago</small>
                         </div>
-                    </div>                         
+                        </div>
+                    </div>
                     <div class="col-sm">
                         <div class="card">
-                        <img class="card-img-top" src="https://dummyimage.com/600x400/55595c/fff" alt="Card image cap">
+                        <div class="gambar">
+                            <img class="card-img-top" src="https://dummyimage.com/600x400/55595c/fff" alt="Card image cap">
+                        </div>
                         <div class="card-body">
                             <h4 class="card-title">Product title</h4>
                             <h6>Rp.....</h6>
@@ -249,13 +300,17 @@
                                 <span class="fa fa-star checked"></span>
                             </div>
                         </div>
+                        <div class="card-footer">
+                            <small class="text-muted">Last updated 3 mins ago</small>
                         </div>
-                    </div>                         
+                        </div>
+                    </div>
+                                                              
                 </div>
             </div>
             <!-- </div> -->
         </div>
-    </div>
+    </div> 
 </div>
   <!-- Footer -->
   <div class="futer mt-footer">
