--- a/asus441uv.html
+++ b/asus441uv.html
@@ -74,7 +74,9 @@
                     <div class="col-12 col-lg-6">
                         <div class="card bg-light mb-3">
                             <div class="card-body">
-                                <img class="img-fluid" src="https://dummyimage.com/800x800/55595c/fff" />
+                                <div class="produk-img">
+                                    <img class="img-fluid" src="img/Asusx441.jpg"/>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -82,21 +84,21 @@
                 <div class="col-12 col-lg-6 add_to_cart_block">
                     <div class="card bg-light mb-3">
                         <div class="card-body">
-                            <h2 class="text-left">Nama Product</h2>
+                            <h2 class="text-left">Asus x441uv</h2>
                             <div class="reviews_product p-3 mb-2 text-left">
-                                    <span class="fa fa-star checked"></span>
-                                    <span class="fa fa-star checked"></span>
-                                    <span class="fa fa-star checked"></span>
-                                    <span class="fa fa-star "></span>
-                                    <span class="fa fa-star"></span>
-                                    <span> (based on ratings) </span> 
-                                <p class="prices"> Rp 15.000.000</p>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star "></span>
+                                <span> (based on ratings) </span> 
+                                <p  class="text-lg warna prices"><strike style="color:gray" class="text-xl">Rp4.250.000</strike> Rp3.995.000</p>                                 
                                 <p><b>Availability :</b> In Stock</p>
                                 <p><b>Condition :</b> New</p>
                                 <p><b>Merk :</b> Asus</p>
                             </div>
                             <div class="btn buy_now_btn">
-                                <a href="#"><b>buy now</b></a>
+                                <a href="payment.html"><b>buy now</b></a>
                             </div>
                         </div>
                     </div>
@@ -123,7 +125,24 @@
                             <div role="tabpanel" id="description" class="product_tab_content active">
                             <div class="product_description_wrap">
                                 <div class="product_desc">
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis noexercit ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id.</p>
+                                    <h5 class="text-left">Asus x441uv intel core i3-6006u vga 920mx nvidia gaming</h5>
+                                    <p>Spesifikasi : </p>
+                                    <ul class="list-group-flush text-left ">
+                                        <li class="list-group-item-light col-6">Intel Core i6-6006u</li>
+                                        <li class="list-group-item-light col-6 ">RAM 4GB</li>
+                                        <li class="list-group-item-light col-6 ">500Gb HDD</li>
+                                        <li class="list-group-item-light col-6 "> Lcd 14inc</li>
+                                        <li class="list-group-item-light col-6 ">Dvd, USB 3.0</li>
+                                        <li class="list-group-item-light col-6 ">Vga nvidia 2gb 920mx</li>
+                                        <li class="list-group-item-light col-6 ">Vga intel hd 2gb</li>
+                                        <li class="list-group-item-light col-6 ">Windows 10 original</li>
+                                    </ul>
+                                    <p>Kelengkapan : </p>
+                                    <ul class="list-group-flush text-left ">
+                                        <li class="list-group-item-light col-6 ">1 unit Asus x441uv</li>
+                                        <li class="list-group-item-light col-6 ">Charger</li>
+                                        <li class="list-group-item-light col-6 ">Bonus Tas, buku panduan</li>
+                                    </ul>
                             </div>
                     </div>
                 </div>
@@ -150,13 +169,13 @@
                             <li class="media my-4">
                                 <img src="img/person.jpeg" class="mr-3 icon-person" alt="...">
                                 <div class="media-body">
-                                <h5 class="mb-0 name">safiraauliar</h5>
-                                <p class="mb-0 date">13 Des, 2019 at: 02:30pm</p>
+                                <h5 class="mb-0 name">Yahya Wildan</h5>
+                                <p class="mb-0 date">01 Jan, 2020 at: 02:30pm</p>
                                 <ul class="rating mb-0 mt-0">
                                         <span class="fa fa-star checked"></span>
                                         <span class="fa fa-star checked"></span>
                                         <span class="fa fa-star checked"></span>
-                                        <span class="fa fa-star"></span>
+                                        <span class="fa fa-star checked"></span>
                                         <span class="fa fa-star"></span>
                                     </ul>
                                     <p class="text">
@@ -167,13 +186,13 @@
                             <li class="media">
                                 <img src="img/person.jpeg" class="mr-3 icon-person" alt="...">
                                 <div class="media-body">
-                                <h5 class="mb-0 name">safiraauliar</h5>
-                                <p class="mb-0 date">13 Des, 2019 at: 02:30pm</p>
+                                <h5 class="mb-0 name">Wahyu_Boy</h5>
+                                <p class="mb-0 date">05 Jan, 2020 at: 02:30pm</p>
                                 <ul class="rating mb-0 mt-0">
                                         <span class="fa fa-star checked"></span>
                                         <span class="fa fa-star checked"></span>
                                         <span class="fa fa-star checked"></span>
-                                        <span class="fa fa-star"></span>
+                                        <span class="fa fa-star checked"></span>
                                         <span class="fa fa-star"></span>
                                     </ul>
                                     <p class="text">
