--- a/store.html
+++ b/store.html
@@ -34,7 +34,7 @@
                   <a class="dropdown-item" href="lenovo.html">Lenovo</a>
                   <a class="dropdown-item" href="asus.html">Asus</a>
                   <!-- <div class="dropdown-divider"></div> -->
-                  <a class="dropdown-item" href="mac.html">Mac</a>
+                  <a class="dropdown-item" href="acer.html">Acer </a>
                 </div>
               </li>
               <li class="nav-item">
