--- a/x1carbon.html
+++ b/x1carbon.html
@@ -74,7 +74,9 @@
                     <div class="col-12 col-lg-6">
                         <div class="card bg-light mb-3">
                             <div class="card-body">
-                                <img class="img-fluid" src="https://dummyimage.com/800x800/55595c/fff" />
+                                <div class="produk-img">
+                                    <img class="img-fluid" src="img/x1carbon.jpg"/>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -82,21 +84,21 @@
                 <div class="col-12 col-lg-6 add_to_cart_block">
                     <div class="card bg-light mb-3">
                         <div class="card-body">
-                            <h2 class="text-left">Nama Product</h2>
+                            <h2 class="text-left">Thinkpad x1 Carbon</h2>
                             <div class="reviews_product p-3 mb-2 text-left">
-                                    <span class="fa fa-star checked"></span>
-                                    <span class="fa fa-star checked"></span>
-                                    <span class="fa fa-star checked"></span>
-                                    <span class="fa fa-star "></span>
-                                    <span class="fa fa-star"></span>
-                                    <span> (based on ratings) </span> 
-                                <p class="prices"> Rp 15.000.000</p>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span> (based on ratings) </span> 
+                                <p  class="text-xl warna prices"><strike style="color:gray" class="text-xl">Rp8.500.000</strike> Rp8.070.000</p>                                 
                                 <p><b>Availability :</b> In Stock</p>
                                 <p><b>Condition :</b> New</p>
-                                <p><b>Merk :</b> Asus</p>
+                                <p><b>Merk :</b> Lenovo</p>
                             </div>
                             <div class="btn buy_now_btn">
-                                <a href="#"><b>buy now</b></a>
+                                <a href="payment.html"><b>buy now</b></a>
                             </div>
                         </div>
                     </div>
@@ -123,7 +125,23 @@
                             <div role="tabpanel" id="description" class="product_tab_content active">
                             <div class="product_description_wrap">
                                 <div class="product_desc">
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis noexercit ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id.</p>
+                                    <h5 class="text-left">LENOVO Thinkpad x1 Carbon 4th Gen</h5>
+                                    <p>Spesifikasi : </p>
+                                    <ul class="list-group-flush text-left ">
+                                        <li class="list-group-item-light col-6">Core i5-6200U Skylake</li>
+                                        <li class="list-group-item-light col-6 ">RAM 8GB</li>
+                                        <li class="list-group-item-light col-6 ">Nvme SSD 128Gb</li>
+                                        <li class="list-group-item-light col-6 ">FHD 1920x1080 IPS</li>
+                                        <li class="list-group-item-light col-6 ">Fingerprint </li>
+                                        <li class="list-group-item-light col-6 ">Backlight Keyboard </li>
+                                        <li class="list-group-item-light col-6 ">Windows 10 Pro </li>
+                                    </ul>
+                                    <p>Kelengkapan : </p>
+                                    <ul class="list-group-flush text-left ">
+                                        <li class="list-group-item-light col-6 ">1 unit Thinkpad x1 Carbon</li>
+                                        <li class="list-group-item-light col-6 ">Charger</li>
+                                        <li class="list-group-item-light col-6 ">Bonus Tas</li>
+                                    </ul>
                             </div>
                     </div>
                 </div>
@@ -150,13 +168,13 @@
                             <li class="media my-4">
                                 <img src="img/person.jpeg" class="mr-3 icon-person" alt="...">
                                 <div class="media-body">
-                                <h5 class="mb-0 name">safiraauliar</h5>
-                                <p class="mb-0 date">13 Des, 2019 at: 02:30pm</p>
+                                <h5 class="mb-0 name">Yahya Wildan</h5>
+                                <p class="mb-0 date">01 Jan, 2020 at: 02:30pm</p>
                                 <ul class="rating mb-0 mt-0">
                                         <span class="fa fa-star checked"></span>
                                         <span class="fa fa-star checked"></span>
                                         <span class="fa fa-star checked"></span>
-                                        <span class="fa fa-star"></span>
+                                        <span class="fa fa-star checked"></span>
                                         <span class="fa fa-star"></span>
                                     </ul>
                                     <p class="text">
@@ -167,13 +185,13 @@
                             <li class="media">
                                 <img src="img/person.jpeg" class="mr-3 icon-person" alt="...">
                                 <div class="media-body">
-                                <h5 class="mb-0 name">safiraauliar</h5>
-                                <p class="mb-0 date">13 Des, 2019 at: 02:30pm</p>
+                                <h5 class="mb-0 name">Wahyu_Boy</h5>
+                                <p class="mb-0 date">05 Jan, 2020 at: 02:30pm</p>
                                 <ul class="rating mb-0 mt-0">
                                         <span class="fa fa-star checked"></span>
                                         <span class="fa fa-star checked"></span>
                                         <span class="fa fa-star checked"></span>
-                                        <span class="fa fa-star"></span>
+                                        <span class="fa fa-star checked"></span>
                                         <span class="fa fa-star"></span>
                                     </ul>
                                     <p class="text">
