--- a/detail/toshiba-c315.html
+++ b/detail/toshiba-c315.html
@@ -80,7 +80,7 @@
                     </div>
         <!-- card name  -->
                 <div class="col-12 col-lg-6">
-                    <div class="card bg-light">
+                    <div class="card bg-light p-2">
                         <div class="card-body">
                             <h2 class="text-left">Toshiba Satellite C840</h2>
                             <div class="mb-1 text-left">
@@ -95,8 +95,8 @@
                                 <p><b>Condition :</b> New</p>
                                 <p><b>Merk :</b> Toshiba</p>
                             </div>
-                            <div class="btn buy_now_btn">
-                                <a href="">buy now</a>
+                            <div class="btn buy_now_btn mb-3">
+                                <a href="../payment.html">buy now</a>
                             </div>
                         </div>
                     </div>
