--- a/acer.html
+++ b/acer.html
@@ -81,31 +81,31 @@
             </div> -->
             <div class="card-body">
                 <div class="row">
-                    <div class="col-sm">
-                        <a href="product.html">
-                          <div class="card">
-                            <div class="gambar">
-                              <span class="badge badge-secondary badge-pill bg-custom position-absolute mt-2 px-3 py-2 offset-md">15%</span>
-                              <img class="card-img-top" src="img/acernitro5.jpg" alt="Card image cap">
-                            </div>
-                            <div class="card-body">
-                              <h4 class="card-title">Acer Nitro 5</h4>
-                              <p  class="text-lg warna"><strike style="color:gray" class="text-xl">Rp.11.699.000</strike> Rp9.944.150</p>                                 
-                              <div class="star">
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star checked"></span>
+                        <div class="col-sm">
+                                <div class="card">
+                                  <a href="acernitro5.html" class="stretched-link"></a>
+                                  <div class="gambar">
+                                    <span class="badge badge-secondary badge-pill bg-custom position-absolute mt-2 px-3 py-2 offset-md">15%</span>
+                                    <img class="card-img-top" src="img/acernitro5.jpg" alt="Card image cap">
+                                  </div>
+                                  <div class="card-body">
+                                    <h4 class="card-title">Acer Nitro 5</h4>
+                                    <p  class="text-lg warna"><strike style="color:gray" class="text-xl">Rp.11.699.000</strike> Rp9.944.150</p>                                 
+                                    <div class="star">
+                                      <span class="fa fa-star checked"></span>
+                                      <span class="fa fa-star checked"></span>
+                                      <span class="fa fa-star checked"></span>
+                                      <span class="fa fa-star checked"></span>
+                                      <span class="fa fa-star checked"></span>
+                                    </div>
+                                  </div>
+                                  <div class="card-footer">
+                                    <small class="text-muted">Last updated 7 mins ago</small>
+                                    <span class="fas fa-heart float-right merah"></span>
+                                  </div>
+                                </div>
+                               
                               </div>
-                            </div>
-                            <div class="card-footer">
-                              <small class="text-muted">Last updated 7 mins ago</small>
-                              <span class="fas fa-heart float-right merah"></span>
-                            </div>
-                          </div>
-                        </a>
-                    </div>
                     <div class="col-sm">
                         <div class="card">
                         <div class="gambar">
